# DesignBuilder

./: .gitignore  README.md  design1.md  pyproject.toml  requirements.txt
designbuilder/: cli.py
designbuilder/cache/: plan_cache.json  status.json
designbuilder/coding_agents/: base.py  python_agent.py
designbuilder/core/: cache_manager.py  orchestrator.py  parser.py  planner.py  status_manager.py
designbuilder/llm_backends/: base.py  gemini.py  gpt4_turbo.py
designbuilder/llm_clis/: base.py  gemini_cli.py
designbuilder/output/: dynamic_api_module.py
designbuilder/prompts/: prompts.py
designbuilder/tests/: design1.md  design2.md  test_orchestrator.py  test_python_agent.py
